--- a/6-sign_up/index.html
+++ b/6-sign_up/index.html
@@ -56,17 +56,10 @@
                 name="email"
                 id="email"
                 aria-label="sign up with your email address"
-                placeholder="john@email.com"
                 required
               />
               <label for="password">Password</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-                placeholder="enter a password"
-                required
-              />
+              <input type="password" name="password" id="password" required />
               <div class="checkbox-container">
                 <input class="checkbox" type="checkbox" name="tos" id="tos" required />
                 <label class="checkbox" for="tos"
