qr code class and styling

--- a/5-boarding_pass/index.html
+++ b/5-boarding_pass/index.html
@@ -79,7 +79,7 @@
             <p class="seat__class">Business</p>
           </div>
           <div>
-            <img src="/img/qr.svg" alt="qr code" />
+            <img class="qr-code" src="img/qr.svg" alt="qr code" />
           </div>
         </section>
       </main>
