data type to consistent

--- a/9-wallet/index.html
+++ b/9-wallet/index.html
@@ -56,7 +56,7 @@
           </nav>
         </header>
         <ul>
-          <li class="balance__item row align--center" data-type="expenditure">
+          <li class="balance__item row align--center" data-type="exp">
             <svg
               fill="#000"
               height="24"
@@ -73,7 +73,7 @@
             </div>
             <p class="amount item__amount expenditure">-£650.<small>00</small></p>
           </li>
-          <li class="balance__item row align--center" data-type="income">
+          <li class="balance__item row align--center" data-type="inc">
             <svg
               fill="#000"
               height="24"
@@ -90,7 +90,7 @@
             </div>
             <p class="amount item__amount income">£900.<small>00</small></p>
           </li>
-          <li class="balance__item row align--center" data-type="expenditure">
+          <li class="balance__item row align--center" data-type="exp">
             <svg
               fill="#000"
               height="24"
@@ -107,7 +107,7 @@
             </div>
             <p class="amount item__amount expenditure">-£65.<small>00</small></p>
           </li>
-          <li class="balance__item row align--center" data-type="expenditure">
+          <li class="balance__item row align--center" data-type="exp">
             <svg
               fill="#921414"
               height="24"
