--- a/6-sign_up/index_v2.html
+++ b/6-sign_up/index_v2.html
@@ -58,7 +58,7 @@
                 type="email"
                 name="email"
                 id="email"
-                aria-label="sign up with your email address"
+                spellcheck="false"
                 required
               />
               <label for="password">Password</label>
