--- a/6-sign_up/index.html
+++ b/6-sign_up/index.html
@@ -51,13 +51,7 @@
             <h2 class="sign-up__email--heading">Or sign up with your email</h2>
             <form class="sign-up__email--form" action="">
               <label for="email">Email</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                aria-label="sign up with your email address"
-                required
-              />
+              <input type="email" name="email" id="email" spellcheck="false" required />
               <label for="password">Password</label>
               <input type="password" name="password" id="password" required />
               <div class="checkbox-container">
